--- a/busqueda.html
+++ b/busqueda.html
@@ -43,16 +43,80 @@
                 <div class="suggestions" id="suggestions" style="display: none;"></div>
             </div>
             <nav class="nav-menu" id="nav-menu">
-                <ul>
-                    <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
-                    <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
-                    <li><a href="categoria.html?nombre=Televisores">Televisores</a></li>
-                    <li><a href="categoria.html?nombre=Celulares">Celulares</a></li>
-                    <li><a href="categoria.html?nombre=Hornos y microondas">Hornos y microondas</a></li>
-                    <li><a href="categoria.html?nombre=Lavarropas y secarropas">Lavarropas y secarropas</a></li>
-                    <li><a href="categoria.html?nombre=Pequeños electrodomésticos">Pequeños electrodomésticos</a></li>
-                </ul>
-            </nav>
+    <ul>
+        <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
+        <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Tv">Tv</a></li>
+                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Audio">Audio</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Climatizacion">Climatización</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion">Calefacción</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">Ventilación</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Aires acondicionados">Aires Acondicionados</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, microondas y freidoras</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Hornos">Hornos</a></li>
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Microondas">Microondas</a></li>
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Freidoras">Freidoras</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Lavado">Lavado</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">Lavarropas</a></li>
+                <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavasecarropas">Lavasecarropas</a></li>
+                <li><a href="categoria.html?nombre=Lavado&subcategoria=Secarropas">Secarropas</a></li>
+                <li><a href="categoria.html?nombre=Lavado&subcategoria=Planchas">Planchas</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Termotanques">Termotanques</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Gas">Gas</a></li>
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Eléctrico">Eléctrico</a></li>
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
+            </ul>
+        </li><li class="has-submenu">
+            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Cuidado personal">Cuidado Personal</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Planchas de pelo">Planchas de Pelo</a></li>
+                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Secadores de pelo">Secadores de Pelo</a></li>
+                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Cortadoras de pelo y barba">Cortadoras de Pelo y Barba</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
         </div>
     </header>
 
