--- a/presupuesto.html
+++ b/presupuesto.html
@@ -43,66 +43,81 @@
                 <div class="suggestions" id="suggestions" style="display: none;"></div>
             </div>
             <nav class="nav-menu" id="nav-menu">
-    <ul>
-        <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
-        <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Tv">Tv</a></li>
-                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Audio">Audio</a></li>
-            </ul>
-        </li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
-                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
-            </ul>
-        </li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Climatizacion">Climatización</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion">Calefacción</a></li>
-                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">Ventilación</a></li>
-                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Aires acondicionados">Aires Acondicionados</a></li>
-            </ul>
-        </li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Lavado">Lavado</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">Lavarropas</a></li>
-                <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavasecarropas">Lavasecarropas</a></li>
-                <li><a href="categoria.html?nombre=Lavado&subcategoria=Secarropas">Secarropas</a></li>
-                <li><a href="categoria.html?nombre=Lavado&subcategoria=Planchas">Planchas</a></li>
-            </ul>
-        </li>
-        <li><a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, Microondas y Freidoras</a></li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños Electrodomésticos</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
-            </ul>
-        </li>
-        <li class="has-submenu">
-            <a href="categoria.html?nombre=Cuidado personal">Cuidado Personal</a>
-            <ul class="submenu">
-                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Planchas de pelo">Planchas de Pelo</a></li>
-                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Secadores de pelo">Secadores de Pelo</a></li>
-                <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Cortadoras de pelo y barba">Cortadoras de Pelo y Barba</a></li>
-            </ul>
-        </li>
-    </ul>
-</nav>
+                <ul>
+                    <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
+                    <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Tv">Tv</a></li>
+                            <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Audio">Audio</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                            <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Climatizacion">Climatización</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion">Calefacción</a></li>
+                            <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">Ventilación</a></li>
+                            <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Aires acondicionados">Aires Acondicionados</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, microondas y freidoras</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Hornos">Hornos</a></li>
+                            <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Microondas">Microondas</a></li>
+                            <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Freidoras">Freidoras</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Lavado">Lavado</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">Lavarropas</a></li>
+                            <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavasecarropas">Lavasecarropas</a></li>
+                            <li><a href="categoria.html?nombre=Lavado&subcategoria=Secarropas">Secarropas</a></li>
+                            <li><a href="categoria.html?nombre=Lavado&subcategoria=Planchas">Planchas</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Termotanques">Termotanques</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Termotanques&subcategoria=Gas">Gas</a></li>
+                            <li><a href="categoria.html?nombre=Termotanques&subcategoria=Eléctrico">Eléctrico</a></li>
+                            <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                            <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="categoria.html?nombre=Cuidado personal">Cuidado Personal</a>
+                        <ul class="submenu">
+                            <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Planchas de pelo">Planchas de Pelo</a></li>
+                            <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Secadores de pelo">Secadores de Pelo</a></li>
+                            <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Cortadoras de pelo y barba">Cortadoras de Pelo y Barba</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -111,57 +126,58 @@
             <h2>Contactanos</h2>
             <p>Si te interesa alguno de nuestros productos, podés consultarnos precios y costos de envío:</p>
 
-            <!-- Nuevo Formulario -->
-        <div class="contact-form">
-            <h3>Envíanos un mensaje</h3>
-            <form id="contact-form" action="https://formspree.io/f/tu-id" method="POST">
-                <div class="form-group">
-                    <label for="name">Nombre (obligatorio)*</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Teléfono (preferiblemente WhatsApp) *</label>
-                    <input type="tel" id="phone" name="phone" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email (opcional)</label>
-                    <input type="email" id="email" name="email">
-                </div>
-                <div class="form-group">
-                    <label for="message">Mensaje *</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <div> <p"<br>Al enviar tu mensaje aceptas las politicas de privacidad y das tu consentimiento para que Center Hogar Quilmes te contacte.</p> </div>
-                <button type="submit" class="buy-btn">Enviar Consulta</button>
-            </form>
-            <p id="form-message" style="display: none; color: #FF6200;"></p>
-        </div>
-    </section>
+            <!-- Formulario -->
+            <div class="contact-form">
+                <h3>Envíanos un mensaje</h3>
+                <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+                    <div class="form-group">
+                        <label for="name">Nombre (obligatorio)*</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Teléfono (preferiblemente WhatsApp) *</label>
+                        <input type="tel" id="phone" name="phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email (opcional)</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mensaje *</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <div>
+                        <p><br>Al enviar tu mensaje aceptas las políticas de privacidad y das tu consentimiento para que Center Hogar Quilmes te contacte.</p>
+                    </div>
+                    <button type="submit" class="buy-btn">Enviar Consulta</button>
+                </form>
+                <p id="form-message" style="display: none; color: #FF6200;"></p>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
-    <div class="container">
-        <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
-        <ul>
-            <li><a href="terminos.html">Términos y condiciones</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="privacidad.html">Privacidad</a></li>
-        </ul>
-    </div>
+        <div class="container">
+            <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
+            <ul>
+                <li><a href="terminos.html">Términos y condiciones</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="privacidad.html">Privacidad</a></li>
+            </ul>
+        </div>
     </footer>
 
-<!-- Botón flotante para volver arriba -->
-<button class="scroll-to-top" title="Volver arriba">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M12 19V5"></path>
-        <path d="M5 12l7-7 7 7"></path>
-    </svg>
-</button>
+    <!-- Botón flotante para volver arriba -->
+    <button class="scroll-to-top" title="Volver arriba">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 19V5"></path>
+            <path d="M5 12l7-7 7 7"></path>
+        </svg>
+    </button>
 
-    <!-- Script -->
-<script src="productos.js"></script>
-<script src="scripts.js"></script>
-<script>
+    <!-- Scripts -->
+    <script src="productos.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
