--- a/privacidad.html
+++ b/privacidad.html
@@ -71,6 +71,14 @@
             </ul>
         </li>
         <li class="has-submenu">
+            <a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, microondas y freidoras</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Hornos">Hornos</a></li>
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Microondas">Microondas</a></li>
+                <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Freidoras">Freidoras</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
             <a href="categoria.html?nombre=Lavado">Lavado</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">Lavarropas</a></li>
@@ -79,9 +87,15 @@
                 <li><a href="categoria.html?nombre=Lavado&subcategoria=Planchas">Planchas</a></li>
             </ul>
         </li>
-        <li><a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, Microondas y Freidoras</a></li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños Electrodomésticos</a>
+            <a href="categoria.html?nombre=Termotanques">Termotanques</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Gas">Gas</a></li>
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Eléctrico">Eléctrico</a></li>
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
+            </ul>
+        </li><li class="has-submenu">
+            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
