--- a/busqueda.html
+++ b/busqueda.html
@@ -122,13 +122,30 @@
 
     <!-- Main Content -->
     <main class="container">
-        <section class="catalog">
-            <h2 id="search-title">Resultados de búsqueda</h2>
-            <div class="product-grid" id="product-grid">
-                <!-- Productos se llenan con JavaScript -->
-            </div>
-        </section>
-    </main>
+    <section class="catalog">
+        <h2 id="search-title">Resultados de búsqueda</h2>
+        <div class="view-toggle" id="view-toggle">
+            <button class="view-btn grid-view active" data-view="grid" title="Vista en mosaico" aria-label="Vista en mosaico">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="3" width="7" height="7"></rect>
+                    <rect x="3" y="14" width="7" height="7"></rect>
+                    <rect x="14" y="14" width="7" height="7"></rect>
+                </svg>
+            </button>
+            <button class="view-btn list-view" data-view="list" title="Vista en lista" aria-label="Vista en lista">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <line x1="3" y1="12" x2="21" y2="12"></line>
+                    <line x1="3" y1="18" x2="21" y2="18"></line>
+                </svg>
+            </button>
+        </div>
+        <div class="product-grid" id="product-grid">
+            <!-- Productos se llenan con JavaScript -->
+        </div>
+    </section>
+</main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -154,166 +171,196 @@
     <script src="productos.js"></script>
     <script src="scripts.js"></script>
     <script>
-        // Normalizar texto para manejar acentos
-        function normalizeString(input) {
-            if (Array.isArray(input)) {
-                input = input.join(' ');
-            }
-            if (typeof input !== 'string') {
-                input = String(input || '');
-            }
-            return input.normalize('NFD').replace(/[\u0300-\u036f]/g, '').toLowerCase();
+    // Normalizar texto para manejar acentos
+    function normalizeString(input) {
+        if (Array.isArray(input)) {
+            input = input.join(' ');
         }
-
-        // Función para dividir el término de búsqueda en palabras clave
-        function getSearchKeywords(query) {
-            return query.trim().split(/\s+/).map(keyword => normalizeString(keyword)).filter(keyword => keyword.length > 0);
+        if (typeof input !== 'string') {
+            input = String(input || '');
         }
+        return input.normalize('NFD').replace(/[\u0300-\u036f]/g, '').toLowerCase();
+    }
 
-        // Función para verificar si un producto coincide con todas las palabras clave
-        function matchesKeywords(producto, keywords) {
-            const fields = [
-                normalizeString(producto.nombre),
-                normalizeString(producto.categoria),
-                normalizeString(producto.codigo || ''),
-                normalizeString(producto.descripcion),
-                normalizeString(producto.caracteristicas)
-            ].join(' ');
+    // Función para dividir el término de búsqueda en palabras clave
+    function getSearchKeywords(query) {
+        return query.trim().split(/\s+/).map(keyword => normalizeString(keyword)).filter(keyword => keyword.length > 0);
+    }
 
-            return keywords.every(keyword => fields.includes(keyword));
-        }
+    // Función para verificar si un producto coincide con todas las palabras clave
+    function matchesKeywords(producto, keywords) {
+        const fields = [
+            normalizeString(producto.nombre),
+            normalizeString(producto.categoria),
+            normalizeString(producto.codigo || ''),
+            normalizeString(producto.descripcion),
+            normalizeString(producto.caracteristicas)
+        ].join(' ');
 
-        // Obtener el término de búsqueda desde la URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const query = urlParams.get('query') || '';
-        document.getElementById('search-title').textContent = query ? `Resultados de búsqueda para "${query}"` : 'Resultados de búsqueda';
-        document.getElementById('searchInput').value = query;
+        return keywords.every(keyword => fields.includes(keyword));
+    }
 
-        // Filtrar productos por todas las palabras clave
-        const keywords = getSearchKeywords(query);
-        const productosFiltrados = productos.filter(producto => matchesKeywords(producto, keywords));
+    // Obtener el término de búsqueda desde la URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const query = urlParams.get('query') || '';
+    document.getElementById('search-title').textContent = query ? `Resultados de búsqueda para "${query}"` : 'Resultados de búsqueda';
+    document.getElementById('searchInput').value = query;
 
-        // Generar las tarjetas de productos
-        const productGrid = document.getElementById('product-grid');
-        productGrid.innerHTML = ''; // Limpiar el grid antes de agregar productos
-        if (productosFiltrados.length === 0) {
-            productGrid.innerHTML = '<p>No se encontraron productos para la búsqueda.</p>';
-        } else {
-            productosFiltrados.forEach(producto => {
-                const card = document.createElement('div');
-                card.className = 'product-card';
-                card.innerHTML = `
-                    <a href="producto.html?nombre=${encodeURIComponent(producto.nombre)}&imagen=${producto.imagen}&imagenes=${producto.imagenes.join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}">
-                        <img src="${producto.imagen}" alt="${producto.nombre}" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+    // Filtrar productos por todas las palabras clave
+    const keywords = getSearchKeywords(query);
+    const productosFiltrados = productos.filter(producto => matchesKeywords(producto, keywords));
+
+    // Generar las tarjetas de productos
+    const productGrid = document.getElementById('product-grid');
+    productGrid.innerHTML = ''; // Limpiar el grid antes de agregar productos
+    if (productosFiltrados.length === 0) {
+        productGrid.innerHTML = '<p>No se encontraron productos para la búsqueda.</p>';
+    } else {
+        productosFiltrados.forEach(producto => {
+            const card = document.createElement('div');
+            card.className = 'product-card';
+            card.innerHTML = `
+                <a href="producto.html?nombre=${encodeURIComponent(producto.nombre)}&categoria=${encodeURIComponent(producto.categoria)}&subcategoria=${encodeURIComponent(producto.subcategoria || '')}&imagen=${encodeURIComponent(producto.imagen)}&imagenes=${producto.imagenes.map(img => encodeURIComponent(img)).join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}">
+                    <img src="${producto.imagen}" alt="${producto.nombre}" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                    <div class="text-container">
                         <h3>${producto.nombre}</h3>
                         <p class="product-code">Código: ${producto.codigo}</p>
                         <button class="buy-btn">Ver más</button>
-                    </a>
-                `;
-                productGrid.appendChild(card);
-            });
+                    </div>
+                </a>
+            `;
+            productGrid.appendChild(card);
+        });
+    }
+
+    // Alternancia entre vistas
+    const gridBtn = document.querySelector('.view-btn.grid-view');
+    const listBtn = document.querySelector('.view-btn.list-view');
+
+    if (productGrid && gridBtn && listBtn) {
+        // Asegurar vista mosaico por defecto
+        productGrid.classList.remove('list-view');
+        gridBtn.classList.add('active');
+        listBtn.classList.remove('active');
+        console.log('Vista inicial: mosaico');
+
+        gridBtn.addEventListener('click', () => {
+            productGrid.classList.remove('list-view');
+            gridBtn.classList.add('active');
+            listBtn.classList.remove('active');
+            console.log('Vista cambiada a: mosaico');
+        });
+
+        listBtn.addEventListener('click', () => {
+            productGrid.classList.add('list-view');
+            listBtn.classList.add('active');
+            gridBtn.classList.remove('active');
+            console.log('Vista cambiada a: lista');
+        });
+    } else {
+        console.error('Error: No se encontraron productGrid, gridBtn o listBtn');
+    }
+
+    // Configurar la barra de búsqueda y sugerencias
+    const searchInput = document.getElementById('searchInput');
+    const suggestionsContainer = document.getElementById('suggestions');
+    let selectedIndex = -1;
+
+    searchInput.addEventListener('input', () => {
+        const query = searchInput.value.trim();
+        const keywords = getSearchKeywords(query);
+        suggestionsContainer.innerHTML = '';
+        selectedIndex = -1;
+
+        if (keywords.length === 0) {
+            suggestionsContainer.style.display = 'none';
+            searchInput.style.borderBottomLeftRadius = '4px';
+            return;
         }
 
-        // Configurar la barra de búsqueda y sugerencias
-        const searchInput = document.getElementById('searchInput');
-        const suggestionsContainer = document.getElementById('suggestions');
-        let selectedIndex = -1;
+        // Filtrar sugerencias por todas las palabras clave
+        const filteredSuggestions = productos.filter(producto => matchesKeywords(producto, keywords));
 
-        searchInput.addEventListener('input', () => {
-            const query = searchInput.value.trim();
-            const keywords = getSearchKeywords(query);
-            suggestionsContainer.innerHTML = '';
-            selectedIndex = -1;
-
-            if (keywords.length === 0) {
-                suggestionsContainer.style.display = 'none';
-                searchInput.style.borderBottomLeftRadius = '4px';
-                return;
-            }
-
-            // Filtrar sugerencias por todas las palabras clave
-            const filteredSuggestions = productos.filter(producto => matchesKeywords(producto, keywords));
-
-            if (filteredSuggestions.length === 0) {
-                suggestionsContainer.style.display = 'none';
-                searchInput.style.borderBottomLeftRadius = '4px';
-                return;
-            }
-
-            // Mostrar hasta 5 sugerencias
-            filteredSuggestions.slice(0, 5).forEach((producto, index) => {
-                const suggestionDiv = document.createElement('div');
-                suggestionDiv.textContent = producto.nombre;
-                suggestionDiv.setAttribute('data-index', index);
-                suggestionDiv.addEventListener('click', () => {
-                    searchInput.value = producto.nombre;
-                    suggestionsContainer.style.display = 'none';
-                    searchInput.style.borderBottomLeftRadius = '4px';
-                    window.location.href = `producto.html?nombre=${encodeURIComponent(producto.nombre)}&imagen=${producto.imagen}&imagenes=${producto.imagenes.join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}`;
-                });
-                suggestionsContainer.appendChild(suggestionDiv);
-            });
-
-            suggestionsContainer.style.display = 'block';
-            searchInput.style.borderBottomLeftRadius = '0';
-        });
-
-        searchInput.addEventListener('keydown', (e) => {
-            const suggestionItems = suggestionsContainer.querySelectorAll('div');
-            if (suggestionItems.length === 0) return;
-
-            if (e.key === 'ArrowDown') {
-                e.preventDefault();
-                selectedIndex = Math.min(selectedIndex + 1, suggestionItems.length - 1);
-                updateSelection();
-            } else if (e.key === 'ArrowUp') {
-                e.preventDefault();
-                selectedIndex = Math.max(selectedIndex - 1, -1);
-                updateSelection();
-            } else if (e.key === 'Enter' && selectedIndex >= 0) {
-                e.preventDefault();
-                const selectedSuggestion = suggestionItems[selectedIndex].textContent;
-                searchInput.value = selectedSuggestion;
-                suggestionsContainer.style.display = 'none';
-                searchInput.style.borderBottomLeftRadius = '4px';
-                const producto = productos.find(p => p.nombre === selectedSuggestion);
-                if (producto) {
-                    window.location.href = `producto.html?nombre=${encodeURIComponent(producto.nombre)}&imagen=${producto.imagen}&imagenes=${producto.imagenes.join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}`;
-                }
-            } else if (e.key === 'Enter') {
-                const query = searchInput.value.trim();
-                if (query) {
-                    window.location.href = `busqueda.html?query=${encodeURIComponent(query)}`;
-                }
-            }
-        });
-
-        function updateSelection() {
-            const suggestionItems = suggestionsContainer.querySelectorAll('div');
-            suggestionItems.forEach((item, index) => {
-                item.classList.toggle('selected', index === selectedIndex);
-            });
-            if (selectedIndex >= 0) {
-                suggestionItems[selectedIndex].scrollIntoView({ block: 'nearest' });
-            }
+        if (filteredSuggestions.length === 0) {
+            suggestionsContainer.style.display = 'none';
+            searchInput.style.borderBottomLeftRadius = '4px';
+            return;
         }
 
-        // Cerrar sugerencias al hacer clic fuera
-        document.addEventListener('click', (e) => {
-            if (!searchInput.contains(e.target) && !suggestionsContainer.contains(e.target)) {
+        // Mostrar hasta 5 sugerencias
+        filteredSuggestions.slice(0, 5).forEach((producto, index) => {
+            const suggestionDiv = document.createElement('div');
+            suggestionDiv.textContent = producto.nombre;
+            suggestionDiv.setAttribute('data-index', index);
+            suggestionDiv.addEventListener('click', () => {
+                searchInput.value = producto.nombre;
                 suggestionsContainer.style.display = 'none';
                 searchInput.style.borderBottomLeftRadius = '4px';
-                selectedIndex = -1;
-            }
+                window.location.href = `producto.html?nombre=${encodeURIComponent(producto.nombre)}&categoria=${encodeURIComponent(producto.categoria)}&subcategoria=${encodeURIComponent(producto.subcategoria || '')}&imagen=${encodeURIComponent(producto.imagen)}&imagenes=${producto.imagenes.map(img => encodeURIComponent(img)).join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}`;
+            });
+            suggestionsContainer.appendChild(suggestionDiv);
         });
 
-        // Redirigir al hacer clic en el botón de búsqueda
-        document.querySelector('.search-btn').addEventListener('click', () => {
+        suggestionsContainer.style.display = 'block';
+        searchInput.style.borderBottomLeftRadius = '0';
+    });
+
+    searchInput.addEventListener('keydown', (e) => {
+        const suggestionItems = suggestionsContainer.querySelectorAll('div');
+        if (suggestionItems.length === 0) return;
+
+        if (e.key === 'ArrowDown') {
+            e.preventDefault();
+            selectedIndex = Math.min(selectedIndex + 1, suggestionItems.length - 1);
+            updateSelection();
+        } else if (e.key === 'ArrowUp') {
+            e.preventDefault();
+            selectedIndex = Math.max(selectedIndex - 1, -1);
+            updateSelection();
+        } else if (e.key === 'Enter' && selectedIndex >= 0) {
+            e.preventDefault();
+            const selectedSuggestion = suggestionItems[selectedIndex].textContent;
+            searchInput.value = selectedSuggestion;
+            suggestionsContainer.style.display = 'none';
+            searchInput.style.borderBottomLeftRadius = '4px';
+            const producto = productos.find(p => p.nombre === selectedSuggestion);
+            if (producto) {
+                window.location.href = `producto.html?nombre=${encodeURIComponent(producto.nombre)}&categoria=${encodeURIComponent(producto.categoria)}&subcategoria=${encodeURIComponent(producto.subcategoria || '')}&imagen=${encodeURIComponent(producto.imagen)}&imagenes=${producto.imagenes.map(img => encodeURIComponent(img)).join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}`;
+            }
+        } else if (e.key === 'Enter') {
             const query = searchInput.value.trim();
             if (query) {
                 window.location.href = `busqueda.html?query=${encodeURIComponent(query)}`;
             }
+        }
+    });
+
+    function updateSelection() {
+        const suggestionItems = suggestionsContainer.querySelectorAll('div');
+        suggestionItems.forEach((item, index) => {
+            item.classList.toggle('selected', index === selectedIndex);
         });
-    </script>
+        if (selectedIndex >= 0) {
+            suggestionItems[selectedIndex].scrollIntoView({ block: 'nearest' });
+        }
+    }
+
+    // Cerrar sugerencias al hacer clic fuera
+    document.addEventListener('click', (e) => {
+        if (!searchInput.contains(e.target) && !suggestionsContainer.contains(e.target)) {
+            suggestionsContainer.style.display = 'none';
+            searchInput.style.borderBottomLeftRadius = '4px';
+            selectedIndex = -1;
+        }
+    });
+
+    // Redirigir al hacer clic en el botón de búsqueda
+    document.querySelector('.search-btn').addEventListener('click', () => {
+        const query = searchInput.value.trim();
+        if (query) {
+            window.location.href = `busqueda.html?query=${encodeURIComponent(query)}`;
+        }
+    });
+</script>
 </body>
 </html>
