--- a/categoria.html
+++ b/categoria.html
@@ -260,7 +260,10 @@
             "Eficiencia energética"
         ],
         "hornos, microondas y freidoras": [
-            "Tipo de equipo",
+            "Convector",
+            "Anafes",
+            "Spiedo",
+            "Grill",
             "Capacidad (litros)",
             "Potencia (W)"
         ],
